# Turbine-detection

./: .gitignore  .main.cpp.swp  CMakeLists.txt  Readme.md  detection.cpp  detection.h  detection.hpp  main.cpp  main.cpp.save
Resources/: Turbine detection flow.drawio
